// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atLeast '' 1`] = `
{
  "expected": [
    "'a'",
  ],
  "value": null,
}
`;

exports[`atLeast 'a' 1`] = `
{
  "expected": [
    "'a'",
  ],
  "value": null,
}
`;

exports[`atLeast 'aa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
  ],
}
`;

exports[`atLeast 'aaa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`atLeast 'abaa' 1`] = `
{
  "expected": [
    "'a'",
  ],
  "value": null,
}
`;

exports[`atMost '' 1`] = `
{
  "expected": [],
  "value": [],
}
`;

exports[`atMost 'a' 1`] = `
{
  "expected": [],
  "value": [
    "a",
  ],
}
`;

exports[`atMost 'aa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
  ],
}
`;

exports[`atMost 'aaa' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`atMost 'abaa' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`chain '' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`chain '1' 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "value": null,
}
`;

exports[`chain '1bar' 1`] = `
{
  "expected": [],
  "value": "bar",
}
`;

exports[`chain '1that' 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "value": null,
}
`;

exports[`chain 'foo' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`chain 'thatthis' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`chain 'this' 1`] = `
{
  "expected": [
    "'that'",
  ],
  "value": null,
}
`;

exports[`chain 'thisbar' 1`] = `
{
  "expected": [
    "'that'",
  ],
  "value": null,
}
`;

exports[`chain 'thisthat' 1`] = `
{
  "expected": [],
  "value": "that",
}
`;

exports[`describe '' 1`] = `
{
  "expected": [
    "some error",
  ],
  "value": null,
}
`;

exports[`describe 'foo' 1`] = `
{
  "expected": [
    "some error",
  ],
  "value": null,
}
`;

exports[`describe 'this' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`fallback '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`fallback 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`fallback 'that' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`fallback 'thatthis' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`fallback 'this' 1`] = `
{
  "expected": [],
  "value": "some fallback",
}
`;

exports[`fallback 'thisthat' 1`] = `
{
  "expected": [],
  "value": "that",
}
`;

exports[`lookahead '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`lookahead 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`lookahead 'that' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`lookahead 'thatthis' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`lookahead 'this' 1`] = `
{
  "expected": [
    "'that'",
  ],
  "value": "",
}
`;

exports[`lookahead 'thisthat' 1`] = `
{
  "expected": [],
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "name": "after",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": {
      "end": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "name": "before",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "value": "this",
    },
  },
}
`;

exports[`many '' 1`] = `
{
  "expected": [],
  "value": [],
}
`;

exports[`many 'a' 1`] = `
{
  "expected": [],
  "value": [
    "a",
  ],
}
`;

exports[`many 'aa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
  ],
}
`;

exports[`many 'aaa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many 'abaa' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`map '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`map 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`map 'this' 1`] = `
{
  "expected": [],
  "value": "this is the result",
}
`;

exports[`mark '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`mark 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`mark 'this' 1`] = `
{
  "expected": [],
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": "this",
  },
}
`;

exports[`node '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`node 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`node 'this' 1`] = `
{
  "expected": [],
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "name": "fancy node",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": "this",
  },
}
`;

exports[`notFollowedBy '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`notFollowedBy 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`notFollowedBy 'that' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`notFollowedBy 'thatthis' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`notFollowedBy 'this' 1`] = `
{
  "expected": [],
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "name": "after",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": {
      "end": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "name": "before",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "value": "this",
    },
  },
}
`;

exports[`notFollowedBy 'thisfoo' 1`] = `
{
  "expected": [],
  "value": {
    "end": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "name": "after",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "value": {
      "end": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "name": "before",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "value": "this",
    },
  },
}
`;

exports[`notFollowedBy 'thisthat' 1`] = `
{
  "expected": [
    "not 'that'",
  ],
  "value": null,
}
`;

exports[`or '' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`or 'foo' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`or 'that' 1`] = `
{
  "expected": [],
  "value": "that",
}
`;

exports[`or 'thatthis' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`or 'this' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`or 'thisthat' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`repeat '' 1`] = `
{
  "expected": [
    "'a'",
  ],
  "value": null,
}
`;

exports[`repeat 'a' 1`] = `
{
  "expected": [],
  "value": [
    "a",
  ],
}
`;

exports[`repeat 'aa' 1`] = `
{
  "expected": [],
  "value": [
    "a",
    "a",
  ],
}
`;

exports[`repeat 'aaa' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`repeat 'abaa' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`result '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`result 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`result 'this' 1`] = `
{
  "expected": [],
  "value": "result",
}
`;

exports[`separateBy '' 1`] = `
{
  "expected": [],
  "value": [],
}
`;

exports[`separateBy 'foo' 1`] = `
{
  "expected": [],
  "value": null,
}
`;

exports[`separateBy 'this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
  ],
}
`;

exports[`separateBy 'this, this' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`separateBy 'this,this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
    "this",
  ],
}
`;

exports[`separateBy 'this,this,this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
    "this",
    "this",
  ],
}
`;

exports[`separateByNotEmpty '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`separateByNotEmpty 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`separateByNotEmpty 'this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
  ],
}
`;

exports[`separateByNotEmpty 'this, this' 1`] = `
{
  "expected": [
    "eof",
  ],
  "value": null,
}
`;

exports[`separateByNotEmpty 'this,this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
    "this",
  ],
}
`;

exports[`separateByNotEmpty 'this,this,this' 1`] = `
{
  "expected": [],
  "value": [
    "this",
    "this",
    "this",
  ],
}
`;

exports[`skip '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`skip 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`skip 'this' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`then '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`then 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`then 'that' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`then 'thatthis' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`then 'this' 1`] = `
{
  "expected": [
    "'that'",
  ],
  "value": null,
}
`;

exports[`then 'thisthat' 1`] = `
{
  "expected": [],
  "value": "that",
}
`;

exports[`trim fixed length '  this' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`trim fixed length ' this ' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`trim fixed length ' this' 1`] = `
{
  "expected": [
    "' '",
  ],
  "value": null,
}
`;

exports[`trim fixed length '' 1`] = `
{
  "expected": [
    "' '",
  ],
  "value": null,
}
`;

exports[`trim fixed length 'foo' 1`] = `
{
  "expected": [
    "' '",
  ],
  "value": null,
}
`;

exports[`trim fixed length 'this ' 1`] = `
{
  "expected": [
    "' '",
  ],
  "value": null,
}
`;

exports[`trim variable length '  this' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`trim variable length ' this ' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`trim variable length ' this' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`trim variable length '' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`trim variable length 'foo' 1`] = `
{
  "expected": [
    "'this'",
  ],
  "value": null,
}
`;

exports[`trim variable length 'this ' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`wrap '' 1`] = `
{
  "expected": [
    "'('",
  ],
  "value": null,
}
`;

exports[`wrap '(this' 1`] = `
{
  "expected": [
    "')'",
  ],
  "value": null,
}
`;

exports[`wrap '(this)' 1`] = `
{
  "expected": [],
  "value": "this",
}
`;

exports[`wrap ')this(' 1`] = `
{
  "expected": [
    "'('",
  ],
  "value": null,
}
`;

exports[`wrap 'foo' 1`] = `
{
  "expected": [
    "'('",
  ],
  "value": null,
}
`;

exports[`wrap 'this)' 1`] = `
{
  "expected": [
    "'('",
  ],
  "value": null,
}
`;
